<resources>
	<string name="app_name">CopEye</string>
	<string name="app_ver">1.0_alpha</string>

	<string name="thanks_permissions">Obrigado</string>
	<string name="alert_permissions_title">Não posso continuar</string>
	<string name="alert_permissions_description">Preciso de todas as permissoes para o correto funcionamento do aplicativo</string>
	<string name="see_permissions">Ver permissões</string>

	<string name="main_title">Scanning</string>
	<string name="Maps">Maps</string>
	<string name="title_activity_formulario">formulario</string>


	<string name="historico">Historico</string>
	<string name="perfil">Perfil</string>
	<string name="nome">Nome</string>
	<string name="acuracia">Acurácia</string>
	<string name="cadastrar_novo">Novo cadastro</string>
	<string name="carregar_foto">Carregar Foto</string>
	<string name="tirar_foto">Tirar foto</string>
	<string name="idade">Idade</string>
	<string name="crime">Crime</string>
	<string name="cancelar">Cancelar</string>
	<string name="cadastrar">Cadastrar</string>
	<string name="perfil_do_suspeito">Perfil do Suspeito</string>
	<string name="crimes">Crimes</string>
	<string name="nivel_de_perigo">Nivel de Perigo</string>
	<string name="mapa">Ver no mapa</string>
	<string name="enviando_dados_ao_aparelho">Enviando dados ao aparelho…</string>
	<string name="foto_do_suspeito">Foto do suspeito</string>
	<string name="rosto_do_suspeito">Rosto do suspeito</string>
	<string name="rosto_comparado">Rosto comparado</string>
	<string name="frame_recebido">Frame recebido</string>
	<string name="notification_suspect">Notificação geral</string>
	<string name="limpar">Limpar</string>
	<string name="entries_history">Entradas: </string>
	<string name="sending">Enviando</string>
	<string name="failed2send">Falha ao enviar</string>
	<string name="try_again">Tente novamente</string>
	<string name="select_face">Selecione um rosto</string>
	<string name="empty_field">Preencha todos os dados</string>
	<string name="empty_photo">Defina uma foto</string>


</resources>
