<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/sampa_background1">

	<androidx.constraintlayout.widget.ConstraintLayout
	android:layout_height="wrap_content"
	android:layout_width="match_parent">


	<ImageView
		android:id="@+id/iForm"
		android:layout_width="205dp"
		android:layout_height="229dp"
		android:layout_marginTop="16dp"
		android:background="@color/cinza_claro_perfil"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:contentDescription="@string/foto_do_suspeito"
		/>

	<Button
		android:id="@+id/bPegaFoto"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:background="@drawable/botao"
		android:text="@string/carregar_foto"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@id/bTakePhoto"
		app:layout_constraintTop_toBottomOf="@+id/iForm" />

	<Button
		android:id="@+id/bTakePhoto"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:background="@drawable/botao"
		android:text="@string/tirar_foto"
		app:layout_constraintEnd_toStartOf="@id/bPegaFoto"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/iForm" />



	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="20dp"
		android:layout_marginEnd="20dp"
		android:layout_marginBottom="24dp"
		android:layout_marginTop="24dp"
		android:background="@color/cinza_claro_perfil"
		android:orientation="vertical"
		app:layout_constraintBottom_toTopOf="@+id/cancela_envio"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/bTakePhoto">


		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/textInputLayout2"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="20dp"
			android:layout_marginTop="20dp"
			android:layout_marginEnd="20dp"
			android:baselineAligned="true"
			app:errorEnabled="true"
			app:hintTextColor="@android:color/background_dark"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/bPegaFoto">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/formName"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/nome"
				android:inputType="text"
				android:maxLines="1" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@id/textInputLayout4"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:layout_marginStart="20dp"
			android:layout_marginTop="20dp"
			android:layout_marginEnd="20dp"
			android:baselineAligned="true"
			app:errorEnabled="true"
			app:hintTextColor="@android:color/background_dark"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
			>

			<com.google.android.material.textfield.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/formAge"
				android:hint="@string/idade"
				android:inputType="number"
				android:maxLines="1">

			</com.google.android.material.textfield.TextInputEditText>


		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/textInputLayout"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="20dp"
			android:layout_marginTop="20dp"
			android:layout_marginEnd="20dp"
			android:baselineAligned="true"
			app:errorEnabled="true"
			app:hintTextColor="@android:color/background_dark"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/formCrime"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/crime"
				android:inputType="text"
				android:maxLines="1" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="20dp"
			android:layout_marginTop="20dp"
			android:layout_marginEnd="20dp"
			android:layout_marginBottom="40dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

			<AutoCompleteTextView
				android:hint="@string/nivel_de_perigo"
				android:id="@+id/formPeri"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="none" />
		</com.google.android.material.textfield.TextInputLayout>


	</LinearLayout>

	<Button
		android:id="@+id/cancela_envio"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="16dp"
		android:background="@drawable/botao"
		android:text="@string/cancelar"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/confirma_envio"
		app:layout_constraintStart_toStartOf="parent" />

	<Button
		android:id="@+id/confirma_envio"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="16dp"
		android:background="@drawable/botao"
		android:text="@string/cadastrar"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@id/cancela_envio" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
