<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sampa_background1"
    tools:context=".PerfilActivity">

    <ImageView
        android:id="@+id/perfilView"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_below="@+id/tSuspeitoNome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="224dp"
        app:layout_constraintEnd_toEndOf="@id/dadosPerfil"
        app:layout_constraintStart_toStartOf="@id/tSuspeitoNome"
        app:layout_constraintTop_toTopOf="parent"
		android:contentDescription="@string/foto_do_suspeito"
		/>

    <TextView
        android:id="@+id/tSuspeitoNome"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/perfil_do_suspeito"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/dadosPerfil"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_alignParentStart="true"
		android:layout_alignParentEnd="true"
		android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
		android:layout_marginEnd="0dp"
		android:layout_marginBottom="8dp"
        android:background="@drawable/borda"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


		<TextView
			android:id="@+id/textNome"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/perfil_back_1"
			android:gravity="center"
			android:text="@string/nome"
			android:textSize="24sp" />

		<TextView
			android:id="@+id/nomePerfil"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/perfil_back_2"
			android:gravity="center"
			android:text="..."

			android:textSize="24sp" />

		<TextView
			android:id="@+id/textIdade"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/perfil_back_1"
			android:gravity="center"
			android:text="@string/idade"
			android:textSize="24sp" />

		<TextView
			android:id="@+id/idadePerfil"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/perfil_back_2"
			android:gravity="center"
			android:text="..."

			android:textSize="24sp" />
		<TextView
			android:id="@+id/textCrime"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/perfil_back_1"
			android:gravity="center"
			android:text="@string/crimes"
			android:textSize="24sp" />

		<TextView
			android:id="@+id/crimesPerfil"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/perfil_back_2"
			android:gravity="center"
			android:text="..."

			android:textSize="24sp" />
		<TextView
			android:id="@+id/textPerigo"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/perfil_back_1"
			android:gravity="center"
			android:text="@string/nivel_de_perigo"
			android:textSize="24sp" />

		<TextView
			android:id="@+id/nivelPerigoPerfil"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/perfil_back_2"
			android:gravity="center"
			android:text="..."

			android:textSize="24sp" />



    </LinearLayout>

</RelativeLayout>
